# review-rot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  action.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
.claude/: instructions.md
.github/workflows/: data.yaml  package.yaml  tests.yaml
docs/: index.html
docs/css/: site.css
docs/js/: site.js
examples/: enterprise.yaml  factory2.yaml  sampleinput.yaml  sampleinput_new_format.yaml
reviewrot/: __init__.py  __main__.py  basereview.py  gerritstack.py  githubstack.py  gitlabstack.py  irc.py  mailer.py  pagurestack.py  phabricatorstack.py
test/: test_basereview.py  test_command_line.py  test_irc.py
test/gerrit_tests/: test_gerrit.py
test/github_tests/: mock_github.py  test_github.py
test/gitlab_tests/: test_gitlab.py
test/pagure_tests/: test_pagure.py
test/phabricator_tests/: test_phabricator.py
